--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <img src="all/src/img/logods rosso.png" alt="">
             <a href="">contattaci</a>
             <a href="">assistenza</a>
+            <a href="">giveaway</a>
+            <a href="">minecraft</a>
             <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
         </div>
     </div>
