--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
                 </h1>
             </div>
             <div class="des">
-                <a href="">home</a>
-                <a href="">info</a>
-                <a href="">giveaway</a>
-                <a href="">minecraft</a>
+                <a href="#body-1">home</a>
+                <a href="#body-2">info</a>
+                <a href="#body-3">giveaway</a>
+                <a href="#body-4">minecraft</a>
             </div>
 
         </div>
-        <div class="body-1">
+        <div id="body-1" class="body-1">
             
         </div>
-        <div class="body-2">
+        <div id="body-2" class="body-2">
 
         </div>
-        <div class="body-3">
+        <div id="body-3" class="body-3">
+
+        </div>
+        <div id="body-4" class="body-4">
+
+        </div>
+        <div id="body-5" class="body-5">
 
         </div>
         <div class="contact">
