--- a/index.html
+++ b/index.html
@@ -13,30 +13,44 @@
                 ㅤㅤ<img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="" srcset="">
                 <h1>
                     ㅤ𝒩𝑒𝓂𝑒𝓈𝒾
-                </h1>
             </div>
             <div class="des">
-                <a href="#body-1">home</a>
-                <a href="#body-2">info</a>
-                <a href="#body-3">giveaway</a>
-                <a href="#body-4">minecraft</a>
+
+                    <a href="#body-1" ">home</a>
+                    <a href="#body-2" ">info</a>
+                    <a href="#body-3" ">giveaway</a>
+                    <a href="#body-4" ">minecraft</a>
+                </ul>
+
             </div>
 
         </div>
-        <div id="body-1" class="body-1">
-            
-        </div>
-        <div id="body-2" class="body-2">
+        <div id="body-1" class="body-1" >
+            <div class="text">
+                <h1>
+                    Ciao e benvenuti in <a href="">𝒩𝑒𝓂𝑒𝓈𝒾</a>
+                </h1>
+                <a href="">
+                    Il miglior server per
+                </a>
+            </div>
+            <div class="imghome">
+                <img src="all/src/img/58ecbde71a15acc072ddee0b1e728d76.png" alt="" srcset="">
+            </div>
 
-        </div>
-        <div id="body-3" class="body-3">
-
-        </div>
-        <div id="body-4" class="body-4">
-
-        </div>
-        <div id="body-5" class="body-5">
-
+             
+        </div> 
+        <div id="body-2" class="body-2" >
+ 
+        </div> 
+        <div id="body-3" class="body-3" >
+ 
+        </div> 
+        <div id="body-4" class="body-4" >
+ 
+        </div> 
+        <div id="body-5" class="body-5" >
+ 
         </div>
         <div class="contact">
             <img src="all/src/img/logods rosso.png" alt="">
@@ -45,5 +59,6 @@
             <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
         </div>
     </div>
+    <script src="all/src/js/script.js"></script>
 </body>
 </html>
