--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <a href="#body-2" ">info</a>
                     <a href="#body-3" ">giveaway</a>
                     <a href="#body-4" ">minecraft</a>
+                    <a href="#body-5" ">staff list</a>
                 </ul>
 
             </div>
