--- a/index.html
+++ b/index.html
@@ -51,7 +51,35 @@
  
         </div> 
         <div id="body-5" class="body-5" >
- 
+            <!-- <div class="title">
+                <h1>STAFF LIST</h1>
+            </div>
+            <div class="madina">
+                <div class="img">
+                    <a href="">FONUDER</a> <br>
+                    <img src="all/src/img/3fc02cb150639c05a612f7e8ef075d24.png" alt="">
+                </div>
+                <a href="">MADINA</a>
+            </div>
+            <div class="madina">
+                <div class="img">
+                    <a href="">CO FOUNDER</a> <br>
+                    <img src="all/src/img/monica.png" alt="">
+                </div>
+                <a href="">Monika.exe</a>
+            </div>
+            <div class="madina">
+                <img src="all/src/img/logods rosso.png" alt="">
+                <a href="">MADINA</a>
+            </div>
+            <div class="madina">
+                <img src="all/src/img/logods rosso.png" alt="">
+                <a href="">MADINA</a>
+            </div>
+            <div class="madina">
+                <img src="all/src/img/logods rosso.png" alt="">
+                <a href="">MADINA</a>
+            </div> !-->
         </div>
         <div class="contact">
             <img src="all/src/img/logods rosso.png" alt="">
