--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             </div>
             <div class="des">
 
-                    <a href="#body-1" ">home</a>
-                    <a href="#body-2" ">info</a>
-                    <a href="#body-3" ">giveaway</a>
-                    <a href="#body-4" ">minecraft</a>
-                    <a href="#body-5" ">staff list</a>
+                    <a href="#body-1" ">Home</a>
+                    <a href="#body-2" ">Info</a>
+                    <a href="#body-3" ">Giveaway</a>
+                    <a href="#body-4" ">Minecraft</a>
+                    <a href="#body-5" ">Staff list</a>
                 </ul>
 
             </div>
@@ -31,9 +31,14 @@
                 <h1>
                     Ciao e benvenuti in <a href="">𝒩𝑒𝓂𝑒𝓈𝒾</a>
                 </h1>
-                <a href="">
+                <a class="sottotitolo" href="">
                     Il miglior server per
-                </a>
+                </a><br>
+                <a class="elenco">• Compagnia</a><br>
+                <a class="elenco">• ############</a><br><br><br>
+                <div class="button">
+                    <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
+                </div>
             </div>
             <div class="imghome">
                 <img src="all/src/img/58ecbde71a15acc072ddee0b1e728d76.png" alt="" srcset="">
