--- a/all/nemesi.html
+++ b/all/nemesi.html
@@ -24,7 +24,7 @@
                 </ul>
             </div>
             <div class="des2">
-               <a href=""> LOGIN</a>
+               <a> LOGIN</a>
             </div>
 
         </div>
