--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="des2">
-               <a href="all/nemesi.html"> LOGIN</a>
+               <a href="nemesi.html"> LOGIN</a>
             </div>
 
         </div>
