--- a/nemesi.html
+++ b/nemesi.html
@@ -24,16 +24,16 @@
                 </ul>
             </div>
             <div class="des2">
-               <a> LOGIN</a>
+               <a href="index.html"> EXIT</a>
             </div>
 
         </div>
         <div id="body-1" class="body-1" >
             <div class="text">
                 <h1>
-                    Ciao e benvenuti in <a href="">𝒩𝑒𝓂𝑒𝓈𝒾</a>
+                    Ciao e benvenuti in <a >𝒩𝑒𝓂𝑒𝓈𝒾</a>
                 </h1>
-                <a class="sottotitolo" href="">
+                <a class="sottotitolo" >
                     Il miglior server per
                 </a><br>
                 <a class="elenco">• Compagnia</a><br>
@@ -89,7 +89,7 @@
             </div> !-->
         </div>
         <div class="contact">
-            <img src="all/src/img/logods rosso.png" alt="">
+            <img src="src/img/logods rosso.png" alt="">
             <a href="">contattaci</a>
             <a href="">assistenza</a>
             <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
