--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Document</title>
+    <title>𝒩𝑒𝓂𝑒𝓈𝒾</title>
 </head>
 <body>
     <div class="container">
         <div class="nav">
+
+
             <div class="sin">
                 ㅤㅤ<img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="" srcset="">
                 <h1>
@@ -16,7 +18,7 @@
             </div>
 
             <div class="des2">
-               <a href="https://develop-ale.github.io/nemesi/nemesi.html"> LOGIN</a>
+               <a href="register.html"> LOGIN</a>
             </div>
 
         </div>
@@ -38,6 +40,5 @@
                 <img src="all/src/img/58ecbde71a15acc072ddee0b1e728d76.png" alt="" srcset="">
             </div>
 
-    <script src="all/src/js/script.js"></script>
 </body>
 </html>
