--- a/nemesi.html
+++ b/nemesi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="all/src/css/style.css">
-    <title>Document</title>
+    <title>𝒩𝑒𝓂𝑒𝓈𝒾</title>
 </head>
 <body>
     <div class="container">
@@ -13,14 +13,16 @@
                 ㅤㅤ<img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="" srcset="">
                 <h1>
                     ㅤ𝒩𝑒𝓂𝑒𝓈𝒾
+                </h1>
             </div>
             <div class="des">
+    <script src="all/src/js/script.js"></script>
 
-                    <a href="#body-1" ">Home</a>
-                    <a href="#body-2" ">Info</a>
-                    <a href="#body-3" ">Giveaway</a>
-                    <a href="#body-4" ">Minecraft</a>
-                    <a href="#body-5" ">Staff list</a>
+                    <a class="catalogonav" href="#body-1" ">Home</a>
+                    <a class="catalogonav" href="#body-2" ">Info</a>
+                    <a class="catalogonav" href="#body-3" ">Giveaway</a>
+                    <a class="catalogonav" href="#body-4" ">Minecraft</a>
+                    <a class="catalogonav" href="#body-5" ">Staff list</a>
                 </ul>
             </div>
             <div class="des2">
@@ -28,6 +30,8 @@
             </div>
 
         </div>
+        <script src="all/src/js/script.js"></script>
+
         <div id="body-1" class="body-1" >
             <div class="text">
                 <h1>
@@ -89,12 +93,12 @@
             </div> !-->
         </div>
         <div class="contact">
-            <img src="src/img/logods rosso.png" alt="">
+            <img src="all/src/img/logods rosso.png" alt="">
             <a href="">contattaci</a>
             <a href="">assistenza</a>
             <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
         </div>
     </div>
-    <script src="all/src/js/script.js"></script>
+
 </body>
 </html>
