--- a/register.html
+++ b/register.html
@@ -15,10 +15,10 @@
                 </h1><br><br>
             </div>
             <div class="divimput">
-                <input type="text" placeholder="nome ">
-                <input type="text" placeholder="cognome">
-                <input type="email" placeholder="email">
-                <input type="password" placeholder="password">
+                <input type="text" placeholder="Nome ">
+                <input type="text" placeholder="Cognome">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
                 <input type="password" placeholder="ripeti password">
             </div><br><br>
             <div class="login">
