--- a/login.html
+++ b/login.html
@@ -15,15 +15,15 @@
                 </h1><br><br>
             </div>
             <div class="divimput">
-                <input type="text" placeholder="nome ">
-                <input type="text" placeholder="cognome">
-                <input type="email" placeholder="email">
-                <input type="password" placeholder="password">
+                <input type="text" placeholder="Nome ">
+                <input type="text" placeholder="Cognome">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
                 <input type="password" placeholder="ripeti password">
             </div><br><br>
             <div class="login">
                 <a class="loginbutton" href="nemesi.html">LOGIN</a><br>
-                <a href="">se hai già un account fai il <a class="textlogin" href="">login</a></a>
+                <a href="">Se non hai un'account<a class="textlogin" href="register.html">registrati</a></a>
             </div>
         </div>
     </div>
