--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <title>𝒩𝑒𝓂𝑒𝓈𝒾</title>
 </head>
