--- a/nemesi.html
+++ b/nemesi.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="all/src/css/style.css">
     <title>𝒩𝑒𝓂𝑒𝓈𝒾</title>
