--- a/nemesi.html
+++ b/nemesi.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" type="image/x-icon">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="all/src/css/style.css">
     <title>𝒩𝑒𝓂𝑒𝓈𝒾</title>
 </head>
+
 <body>
     <div class="container">
         <div class="nav">
@@ -17,28 +19,28 @@
                 </h1>
             </div>
             <div class="des">
-    <script src="all/src/js/script.js"></script>
+                <script src="all/src/js/script.js"></script>
 
-                    <a class="catalogonav" href="#body-1" ">Home</a>
-                    <a class="catalogonav" href="#body-2" ">Info</a>
-                    <a class="catalogonav" href="#body-3" ">Giveaway</a>
-                    <a class="catalogonav" href="#body-4" ">Minecraft</a>
-                    <a class="catalogonav" href="#body-5" ">Staff list</a>
+                <a class="catalogonav" href="#body-1" ">Home</a>
+                    <a class=" catalogonav" href="#body-2" ">Info</a>
+                    <a class=" catalogonav" href="#body-3" ">Giveaway</a>
+                    <a class=" catalogonav" href="#body-4" ">Minecraft</a>
+                    <a class=" catalogonav" href="#body-5" ">Staff list</a>
                 </ul>
             </div>
-            <div class="des2">
-               <a href="index.html"> EXIT</a>
+            <div class=" des2">
+                    <a href="index.html"> EXIT</a>
             </div>
 
         </div>
         <script src="all/src/js/script.js"></script>
 
-        <div id="body-1" class="body-1" >
+        <div id="body-1" class="body-1">
             <div class="text">
                 <h1>
-                    Ciao e benvenuti in <a >𝒩𝑒𝓂𝑒𝓈𝒾</a>
+                    Ciao e benvenuti in <a>𝒩𝑒𝓂𝑒𝓈𝒾</a>
                 </h1>
-                <a class="sottotitolo" >
+                <a class="sottotitolo">
                     Il miglior server per
                 </a><br>
                 <a class="elenco">• Compagnia</a><br>
@@ -51,47 +53,58 @@
                 <img src="all/src/img/58ecbde71a15acc072ddee0b1e728d76.png" alt="" srcset="">
             </div>
 
-             
-        </div> 
-        <div id="body-2" class="body-2" >
- 
-        </div> 
-        <div id="body-3" class="body-3" >
- 
-        </div> 
-        <div id="body-4" class="body-4" >
- 
-        </div> 
-        <div id="body-5" class="body-5" >
-            <!-- <div class="title">
-                <h1>STAFF LIST</h1>
-            </div>
-            <div class="madina">
-                <div class="img">
-                    <a href="">FONUDER</a> <br>
-                    <img src="all/src/img/3fc02cb150639c05a612f7e8ef075d24.png" alt="">
+
+        </div>
+        <div id="body-2" class="body-2">
+
+        </div>
+        <div id="body-3" class="body-3">
+
+        </div>
+        <div id="body-4" class="body-4">
+
+        </div>
+        <div id="body-5" class="body-5">
+            <div class="staff">
+                <a class="founder">FOUNDER</a><br><br><br>
+                <div class="stafform">
+                    <img src="all/src/img/3fc02cb150639c05a612f7e8ef075d24.png">
+                    <a class="text">@𝙢𝙖𝙙𝙞𝙣𝙖⁶⁹</a>
                 </div>
-                <a href="">MADINA</a>
             </div>
-            <div class="madina">
-                <div class="img">
-                    <a href="">CO FOUNDER</a> <br>
-                    <img src="all/src/img/monica.png" alt="">
+            <div class="staff2">
+                <a class="co-founder">CO FOUNDER</a><br><br><br>
+                <div class="linea">
+                    <div class="stafform">
+                        <img src="all/src/img/monica.png">
+                        <a class="text">@Monika.exe</a>
+                    </div><BR></BR>
+                    <div class="stafform">
+                        <img src="all/src/img/fee63c1723e184e983b8e8f5ea5bd5bd.png">
+                        <a class="text">ㅤ@Lucky</a>
+                    </div>
                 </div>
-                <a href="">Monika.exe</a>
             </div>
-            <div class="madina">
-                <img src="all/src/img/logods rosso.png" alt="">
-                <a href="">MADINA</a>
+            <div class="staff">
+                <a class="admin">ADMIN</a><br><br><br>
+                <div class="stafform">
+                    <img src="all/src/img/fee63c1723e184e983b8e8f5ea5bd5bd.png">
+                    <a class="text">@Vaporous knight</a>
+                </div>
             </div>
-            <div class="madina">
-                <img src="all/src/img/logods rosso.png" alt="">
-                <a href="">MADINA</a>
+            <div class="staff2">
+                <a class="co-founder">HELPER</a><br><br><br>
+                <div class="linea">
+                    <div class="stafform">
+                        <img src="all/src/img/57de8ec71c1c002b2729d4968fe94225.png">
+                        <a class="text">Ale_</a>
+                    </div><BR></BR>
+                    <div class="stafform">
+                        <img src="all/src/img/81ed5067e471e098cbdaaa8905499855.png">
+                        <a class="text">Fragolino®</a>
+                    </div>
+                </div>
             </div>
-            <div class="madina">
-                <img src="all/src/img/logods rosso.png" alt="">
-                <a href="">MADINA</a>
-            </div> !-->
         </div>
         <div class="contact">
             <img src="all/src/img/logods rosso.png" alt="">
@@ -102,4 +115,5 @@
     </div>
 
 </body>
+
 </html>
