--- a/nemesi.html
+++ b/nemesi.html
@@ -94,15 +94,23 @@
             </div>
             <div class="staff2">
                 <a class="co-founder">HELPER</a><br><br><br>
-                <div class="linea">
+                <div class="linea2">
                     <div class="stafform">
                         <img src="all/src/img/57de8ec71c1c002b2729d4968fe94225.png">
-                        <a class="text">Ale_</a>
+                        <a class="text">@Ale_</a>
                     </div><BR></BR>
                     <div class="stafform">
                         <img src="all/src/img/81ed5067e471e098cbdaaa8905499855.png">
-                        <a class="text">Fragolino®</a>
+                        <a class="text">@Fragolino®</a>
                     </div>
+                    <div class="stafform">
+                        <img src="all/src/img/2db139ba523c4ecd08de840349c46a93.png">
+                        <a class="text">@bico</a>
+                    </div><BR></BR>
+                    <div class="stafform">
+                        <img src="all/src/img/721e895c79f3100228606c28699c8c11.png">
+                        <a class="text">@gaia</a>
+                    </div><BR></BR>
                 </div>
             </div>
         </div>
