--- a/nemesi.html
+++ b/nemesi.html
@@ -88,7 +88,7 @@
             <div class="staff">
                 <a class="admin">ADMIN</a><br><br><br>
                 <div class="stafform">
-                    <img src="all/src/img/00b29f911a28a289a7bdbd6451ce10a7.png">
+                    <img src="all/src/img/00b29f911a28a289a7bdbd6451ce10a7.png*">
                     <a class="text">@Vaporous knight</a>
                 </div>
             </div>
