--- a/nemesi.html
+++ b/nemesi.html
@@ -44,7 +44,7 @@
                     Il miglior server per
                 </a><br>
                 <a class="elenco">• Compagnia</a><br>
-                <a class="elenco">• ############</a><br><br><br>
+                <a class="elenco">• Eventi</a><br><br><br>
                 <div class="button">
                     <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
                 </div>
@@ -59,9 +59,9 @@
 
         </div>
         <div id="body-3" class="body-3">
-
         </div>
         <div id="body-4" class="body-4">
+            <h1>COMING SOON...</h1>
 
         </div>
         <div id="body-5" class="body-5">
@@ -88,7 +88,7 @@
             <div class="staff">
                 <a class="admin">ADMIN</a><br><br><br>
                 <div class="stafform">
-                    <img src="all/src/img/00b29f911a28a289a7bdbd6451ce10a7.png*">
+                    <img src="all/src/img/00b29f911a28a289a7bdbd6451ce10a7.png">
                     <a class="text">@Vaporous knight</a>
                 </div>
             </div>
