--- a/nemesi.html
+++ b/nemesi.html
@@ -43,8 +43,9 @@
                 <a class="sottotitolo">
                     Il miglior server per
                 </a><br>
-                <a class="elenco">• Compagnia</a><br>
-                <a class="elenco">• Eventi</a><br><br><br>
+                <a class="elenco">• Serate</a> <br>
+                <a class="elenco">• Eventi</a><br>
+                <a class="elenco">• Compagnia</a><br><br><br>
                 <div class="button">
                     <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
                 </div>
@@ -56,7 +57,14 @@
 
         </div>
         <div id="body-2" class="body-2">
+            <div class="title-info">
+                <img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="">
+                <h1>
+                    INFO
+                </h1>
+                <img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="">
 
+            </div>
         </div>
         <div id="body-3" class="body-3">
         </div>
