--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <a class="sottotitolo" href="">
                     Il miglior server per
                 </a><br>
-                <a class="elenco">• Compagnia</a><br>
-                <a class="elenco">• ############</a><br><br><br>
+                <a class="elenco">• Serate</a> <br>
+                <a class="elenco">• Eventi</a><br>
+                <a class="elenco">• Compagnia</a><br><br><br>
                 <div class="button">
                     <a href="https://discord.gg/wKQ2hSKFy8">discord</a>
                 </div>
