--- a/nemesi.html
+++ b/nemesi.html
@@ -63,7 +63,20 @@
                     INFO
                 </h1>
                 <img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="">
-
+            </div>
+            <div class="cont">
+                <div class="sin">
+                    <div class="uno"></div>
+                    <div class="due"></div>
+                    <div class="tre"></div>
+                    <div class="quattro"></div>
+                </div>
+                <div class="des">
+                    <div class="uno"></div>
+                    <div class="due"></div>
+                    <div class="tre"></div>
+                    <div class="quattro"></div>
+                </div>
             </div>
         </div>
         <div id="body-3" class="body-3">
