--- a/nemesi.html
+++ b/nemesi.html
@@ -65,13 +65,13 @@
                 <img src="all/src/img/Nemesi_2-Photoroom.png-Photoroom.png" alt="">
             </div>
             <div class="cont">
-                <div class="sin">
+                <div class="sin-1">
                     <div class="uno"></div>
                     <div class="due"></div>
                     <div class="tre"></div>
                     <div class="quattro"></div>
                 </div>
-                <div class="des">
+                <div class="des-1">
                     <div class="uno"></div>
                     <div class="due"></div>
                     <div class="tre"></div>
