--- a/nemesi.html
+++ b/nemesi.html
@@ -66,16 +66,16 @@
             </div>
             <div class="cont">
                 <div class="sin-1">
-                    <div class="uno"></div>
-                    <div class="due"></div>
-                    <div class="tre"></div>
-                    <div class="quattro"></div>
+                    <div class="uno">##########</div>
+                    <div class="uno">##########</div>
+                    <div class="uno">##########</div>
+                    <div class="uno">##########</div>
                 </div>
                 <div class="des-1">
-                    <div class="uno"></div>
-                    <div class="due"></div>
-                    <div class="tre"></div>
-                    <div class="quattro"></div>
+                    <div class="uno">##########</div>
+                    <div class="uno">##########</div>
+                    <div class="uno">##########</div>
+                    <div class="uno">##########</div>
                 </div>
             </div>
         </div>
