--- a/nemesi.html
+++ b/nemesi.html
@@ -80,6 +80,52 @@
             </div>
         </div>
         <div id="body-3" class="body-3">
+
+            <div class="container-3">
+                <div class="sin-3">
+                    
+                </div>
+                <div class="des-3">
+                    <div class="container-des"><br><br>
+                        <div class="giveaway-1">
+                            <div class="titolo-3">
+                                <a class="t">
+                                    TITOLO
+                                </a>
+                                <a class="d">Descrizione</a>
+                            </div>
+                            <div class="stato">
+                                <a><b>•</b> attivo</a>
+                                <a>ㅤ</a>
+                            </div>
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+                        <div class="giveaway-1">
+
+                        </div><br><br>
+
+                        
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div id="body-4" class="body-4">
             <h1>COMING SOON...</h1>
