--- a/nemesi.html
+++ b/nemesi.html
@@ -66,9 +66,9 @@
             </div>
             <div class="cont">
                 <div class="sin-1">
-                    <div class="uno">##########</div>
-                    <div class="uno">##########</div>
-                    <div class="uno">##########</div>
+                    <div class="uno">EVENTI</div>
+                    <div class="uno">SERATE GAMING</div>
+                    <div class="uno">JUST CHATTING</div>
                     <div class="uno">##########</div>
                 </div>
                 <div class="des-1">
@@ -83,7 +83,34 @@
 
             <div class="container-3">
                 <div class="sin-3">
-                    
+                    <div class="title-sin">
+                        <a>GIVEAWAY</a>
+                    </div>
+                    <div class="desc-sin">
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                        ############### <br>
+                    </div>
                 </div>
                 <div class="des-3">
                     <div class="container-des"><br><br>
