--- a/nemesi.html
+++ b/nemesi.html
@@ -67,15 +67,15 @@
             <div class="cont">
                 <div class="sin-1">
                     <div class="uno">EVENTI</div>
-                    <div class="uno">SERATE GAMING</div>
                     <div class="uno">JUST CHATTING</div>
-                    <div class="uno">##########</div>
+                    <div class="uno">CONOSCENZA</div>
+                    <div class="uno">NOTTATE</div>
                 </div>
                 <div class="des-1">
-                    <div class="uno">##########</div>
-                    <div class="uno">##########</div>
-                    <div class="uno">##########</div>
-                    <div class="uno">##########</div>
+                    <div class="uno">GIOCHI</div>
+                    <div class="uno">DIVERTIMENTO</div>
+                    <div class="uno">MUSICA</div>
+                    <div class="uno">GIVEAWAY</div>
                 </div>
             </div>
         </div>
@@ -87,29 +87,26 @@
                         <a>GIVEAWAY</a>
                     </div>
                     <div class="desc-sin">
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
-                        ############### <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
+                        ################# <br>
                     </div>
                 </div>
                 <div class="des-3">
@@ -117,35 +114,14 @@
                         <div class="giveaway-1">
                             <div class="titolo-3">
                                 <a class="t">
-                                    TITOLO
+                                    ㅤGiveaway
                                 </a>
-                                <a class="d">Descrizione</a>
+                                <a class="d">ㅤPer il momento ancora non c'è nessun giveaway</a>
                             </div>
                             <div class="stato">
-                                <a><b>•</b> attivo</a>
-                                <a>ㅤ</a>
+                                <a><b>•</b> attivoㅤ</a>
+                                <a></a>
                             </div>
-                        </div><br><br>
-                        <div class="giveaway-1">
-
-                        </div><br><br>
-                        <div class="giveaway-1">
-
-                        </div><br><br>
-                        <div class="giveaway-1">
-
-                        </div><br><br>
-                        <div class="giveaway-1">
-
-                        </div><br><br>
-                        <div class="giveaway-1">
-
-                        </div><br><br>
-                        <div class="giveaway-1">
-
-                        </div><br><br>
-                        <div class="giveaway-1">
-
                         </div><br><br>
 
                         
