--- a/nemesi.html
+++ b/nemesi.html
@@ -87,26 +87,21 @@
                         <a>GIVEAWAY</a>
                     </div>
                     <div class="desc-sin">
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
-                        ################# <br>
+                        <a>
+                        Benvenuto/a nei Giveaway🎊 <br><br>
+                        Quì avrete la possibilità<br>
+                        di vincere molti premi <br> <br>
+                        Per vincere bisogna <br>
+                        entrare nel Giveaway <br>
+                        tramite il pulsante persente <br>
+                        nella categoria <b class="evidenziato">#Giveaway</b> <br>
+                        su discord <br><br>
+                        Se vinci ti verrà mandato <br>
+                        in dm un messaggio <br>
+                        dove riceverai la ricompensa <br> <br> <br>
+                        Ti salutiamo <br>
+                        da tutto lo staff
+
                     </div>
                 </div>
                 <div class="des-3">
